--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/x-data-grid": "^7.11.0",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.15",
+    "@types/leaflet-providers": "^1.2.4",
     "axios": "^1.7.4",
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
+    "leaflet-providers": "^2.0.0",
     "leaflet.markercluster": "^1.5.3",
     "next": "^14.2.14",
     "react": "^18",
