--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "leaflet-providers": "^2.0.0",
+    "leaflet-switch-basemap": "^1.0.6",
     "leaflet.markercluster": "^1.5.3",
-    "next": "^14.2.14",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
